# xournal

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  build_debug.sh  build_debug_warnings.sh  lldb_output_2018-05-18.txt  sed_gtk_include.sh
src/: Makefile.am  main.c  xo-callbacks.h  xo-debug.c  xo-debug.h  xo-map-to-output-callbacks.c  xo-map-to-output-callbacks.h  xo-map-to-output-canvas-functions.c  xo-map-to-output-canvas-functions.h  xo-map-to-output-decl.h  xo-map-to-output-error.c  xo-map-to-output-error.h  xo-map-to-output-scrolling.c  xo-map-to-output-scrolling.h  xo-map-to-output.c  xo-map-to-output.h  xo-shapes.c  xo-tablet-driver.h  xo-wacom-driver.c  xo-wacom-driver.h  xournal.h
